# bptf-trade-helper

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
app/: config.py  crud.py  dependencies.py  main.py  scheduler.py
app/core/: bp_client.py  scanner.py  sync_tracker.py
app/db/: base.py  models.py
app/models/: enums.py  listings.py  responses.py
app/routers/: api.py  views.py
app/services/: listing_service.py  scanner_service.py
app/static/css/: styles.css
app/templates/: base.html
app/templates/pages/: buyorder_state_history.html  dashboard.html  dashboard_sellorders.html
app/templates/partials/: buyorder_row.html  history_row.html  sellorder_row.html  sync_status.html
